tests/requests/valid/rfc9112_target_authority_connect_01.http
CONNECT example.com:443 HTTP/1.1\r\n
Host: example.com:443\r\n
\r\n
