tests/requests/invalid/method_02.http
CONNECT domain.example HTTP/1.1\r\n
Content-Length: 3\r\n
\r\n
FOO
